--- a/docs/buttons.mdx
+++ b/docs/buttons.mdx
@@ -15,6 +15,8 @@ Please note that the color and size are built through CSS classes applied to the
 
 Use these for the main action in a section or screen. You should display only one primary button at a time.
 
+_NOTE: You can mouse over on button to see the `:hover` effect or click it to see the `active` effect._
+
 <Playground>
   <button className="btn btn--uranus btn--medium">
     primary
