Quick copy update in homepage

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -70,10 +70,10 @@ import { Fragment } from 'react'
       </h3>
       
       <p>
-        Design is meant to be <b>for all</b>. Astro style and components follow basic recommendations from the <b>WCAG 2.0 guidelines</b> for accessibility, with tested contrast ratios and good practices in legibility.
+        Design is meant to be <b>for all</b>. Astro style and components follow basic recommendations from the <b>WCAG guidelines</b> for accessibility, with tested contrast ratios and good practices in legibility and screen reading solutions.
       </p>
       <a href="https://www.w3.org/TR/WCAG21/">
-      See WCAG 2.0 >>
+      See WCAG >>
       </a>
     </div>
   </div>
