Quick copy update in homepage

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -93,7 +93,7 @@ import { Fragment } from 'react'
 
 * Get our font links in the [Typography page](https://magnetis.github.io/astro/#/docs-typography) and load them in your project.
 
-[Read install docs](https://github.com/magnetis/astro/blob/master/README.md#adding-astro-to-your-project)
+[Read install docs >>](https://github.com/magnetis/astro/blob/master/README.md#adding-astro-to-your-project)
 
 ### usage
 
@@ -107,7 +107,7 @@ import { Fragment } from 'react'
   </button>
 ```
 
-[Read usage docs](https://github.com/magnetis/astro/blob/master/README.md#using-astro)
+[Read usage docs >>](https://github.com/magnetis/astro/blob/master/README.md#using-astro)
 
 ### contribute
 * Fork Astro and `yarn install`
@@ -122,4 +122,4 @@ import { Fragment } from 'react'
 
 * Run `yarn docz:dev` and visit [localhost:3000](http://localhost:3000/)
 
-[Read contributing guide](https://github.com/magnetis/astro/blob/master/CONTRIBUTING.md)
+[Read contributing guide >>](https://github.com/magnetis/astro/blob/master/CONTRIBUTING.md)
