Add links to Buttons page and update base CSS (#25)
* Add links to Buttons section and update base CSS

--- a/docs/buttons.mdx
+++ b/docs/buttons.mdx
@@ -11,7 +11,7 @@ import { Playground } from 'docz'
 
 Primary buttons are medium sized and have a colored background. They aren't always blue, though, so there isn't a default "primary" look or CSS class - primary here is more of a concept.
 
-Please note that the color and size are built through CSS classes applied to the `<button>` element. You'll always need to specify color and size to get a complete button.
+Please note that color and size are built through CSS classes applied to the `<button>` element. You'll always need to specify color and size to get a complete button.
 
 Use these for the main action in a section or screen. You should display only one primary button at a time.
 
@@ -101,19 +101,29 @@ Please note that there are color variations to the outline CSS classes. You also
   </button>
 </Playground>
 
-## `<a>` elements
+## links
 
-Although the button classes are designed for `<button>` elements, you may also use them with `<a>` elements when it's semantically recomended. Note that some browsers may render them slightly differently. 
+For inline links in paragraphs and informative texts. If you're looking for buttons in `<a>` tags, see "buttons in `<a>` elements" below.
 
-`<a>` elements don't have a `:disabled` attribute/pseudo selector, so if you need that state, you need to add a `disabled` class like the example below.
+Mouseover and click the link to view `:hover` and `:active` states.
+
+<Playground>
+  <a>inline link</a>
+</Playground>
+
+## buttons in `<a>` elements
+
+Although button classes are designed for `<button>` elements, you may also use them with `<a>` elements when semantically recommended. Note that some browsers may render them slightly differently. 
+
+`<a>` elements don't have a `:disabled` attribute/pseudo selector, so if you need such state, you'll have to add a `disabled` class like the example below.
 
 If your `<a>` button triggers in-page functionalities instead of linking (to other pages or within the current page), make them semantically accessible by adding a `role="button"`.
 
 <Playground>
   <a className="btn btn--uranus btn--medium">
-    link
+    link button
   </a>
   <a className="btn btn--uranus btn--medium disabled">
-    link disabled
+    link button disabled
   </a>
 </Playground>
