Change selector structure and add "astro" prefixes (#28)
* Change selector structure and add Astro prefixes
* Update readme
* Fix minor checkbox bug
* Refactor and update typography styles

--- a/docs/buttons.mdx
+++ b/docs/buttons.mdx
@@ -18,23 +18,23 @@ Use these for the main action in a section or screen. You should display only on
 Mouseover and click to view `:hover` and `:active` states.
 
 <Playground>
-  <button className="btn btn--uranus btn--medium">
+  <button className="a-btn a-btn--uranus a-btn--medium">
     uranus
   </button>
 
-  <button className="btn btn--earth btn--medium">
+  <button className="a-btn a-btn--earth a-btn--medium">
     earth
   </button>
 
-  <button className="btn btn--venus btn--medium">
+  <button className="a-btn a-btn--venus a-btn--medium">
     venus
   </button>
 
-  <button className="btn btn--mars btn--medium">
+  <button className="a-btn a-btn--mars a-btn--medium">
     mars
   </button>
   
-  <button className="btn btn--uranus btn--medium" disabled>
+  <button className="a-btn a-btn--uranus a-btn--medium" disabled>
     disabled
   </button>
 </Playground>
@@ -48,23 +48,23 @@ Please note that there are color variations to the outline CSS classes. You also
 Mouseover and click to view `:hover` and `:active` states.
 
 <Playground>
-  <button className="btn btn--outline-uranus btn--medium">
+  <button className="a-btn a-btn--outline-uranus a-btn--medium">
     outline uranus
   </button>
 
-  <button className="btn btn--outline-earth btn--medium">
+  <button className="a-btn a-btn--outline-earth a-btn--medium">
     outline earth
   </button>
 
-  <button className="btn btn--outline-venus btn--medium">
+  <button className="a-btn a-btn--outline-venus a-btn--medium">
     outline venus
   </button>
 
-  <button className="btn btn--outline-mars btn--medium">
+  <button className="a-btn a-btn--outline-mars a-btn--medium">
     outline mars
   </button>
  
-  <button className="btn btn--outline-venus btn--medium" disabled>
+  <button className="a-btn a-btn--outline-venus a-btn--medium" disabled>
     outline disabled
   </button>
 </Playground>
@@ -78,23 +78,23 @@ Aside from using the ghost button CSS class, you also need to specify size and c
 Mouseover and click to view `:hover` and `:active` states.
 
 <Playground>
-  <button className="btn btn--ghost-uranus btn--medium">
+  <button className="a-btn a-btn--ghost-uranus a-btn--medium">
     ghost uranus
   </button>
 
-  <button className="btn btn--ghost-earth btn--medium">
+  <button className="a-btn a-btn--ghost-earth a-btn--medium">
     ghost earth
   </button>
 
-  <button className="btn btn--ghost-venus btn--medium">
+  <button className="a-btn a-btn--ghost-venus a-btn--medium">
     ghost venus
   </button>
 
-  <button className="btn btn--ghost-mars btn--medium">
+  <button className="a-btn a-btn--ghost-mars a-btn--medium">
     ghost mars
   </button>
  
-  <button className="btn btn--ghost-venus btn--medium" disabled>
+  <button className="a-btn a-btn--ghost-venus a-btn--medium" disabled>
     ghost disabled
   </button>
 </Playground>
@@ -104,39 +104,39 @@ Mouseover and click to view `:hover` and `:active` states.
 Buttons can have different sizes, also by changing their CSS size class.
 
 <Playground>
-  <button className="btn btn--uranus btn--small">
+  <button className="a-btn a-btn--uranus a-btn--small">
     small
   </button>
  
-  <button className="btn btn--uranus btn--medium">
+  <button className="a-btn a-btn--uranus a-btn--medium">
     medium
   </button>
 
-  <button className="btn btn--uranus btn--large">
+  <button className="a-btn a-btn--uranus a-btn--large">
     large
   </button>
 </Playground>
 
 <Playground>
-  <button className="btn btn--outline-uranus btn--small">
+  <button className="a-btn a-btn--outline-uranus a-btn--small">
     outline small
   </button>
-  <button className="btn btn--outline-uranus btn--medium">
+  <button className="a-btn a-btn--outline-uranus a-btn--medium">
     outline medium
   </button>
-  <button className="btn btn--outline-uranus btn--large">
+  <button className="a-btn a-btn--outline-uranus a-btn--large">
     outline large
   </button>
 </Playground>
 
 <Playground>
-  <button className="btn btn--ghost-uranus btn--small">
+  <button className="a-btn a-btn--ghost-uranus a-btn--small">
     ghost small
   </button>
-  <button className="btn btn--ghost-uranus btn--medium">
+  <button className="a-btn a-btn--ghost-uranus a-btn--medium">
     ghost medium
   </button>
-  <button className="btn btn--ghost-uranus btn--large">
+  <button className="a-btn a-btn--ghost-uranus a-btn--large">
     ghost large
   </button>
 </Playground>
@@ -150,22 +150,22 @@ If you're looking for buttons in `<a>` tags, see "buttons in `<a>` elements" bel
 Mouseover and click to view `:hover` and `:active` states.
 
 <Playground>
-  <a>inline link</a>
+  <a className="a-link">inline link</a>
 </Playground>
 
 ## buttons in `<a>` elements
 
 Although button classes are designed for `<button>` elements, you may also use them with `<a>` elements when semantically recommended. Note that some browsers may render them slightly differently. 
 
-`<a>` elements don't have a `:disabled` attribute/pseudo selector, so if you need such state, you'll have to add a `disabled` class like the example below.
+`<a>` elements don't have a `:disabled` attribute/pseudo selector, so if you need such state, you'll have to add the `a-btn--disabled` class like the example below.
 
 If your `<a>` button triggers in-page functionalities instead of linking (to other pages or within the current page), make them semantically accessible by adding a `role="button"`.
 
 <Playground>
-  <a className="btn btn--uranus btn--medium">
+  <a className="a-btn a-btn--uranus a-btn--medium">
     link button
   </a>
-  <a className="btn btn--uranus btn--medium disabled">
+  <a className="a-btn a-btn--uranus a-btn--medium a-btn--disabled">
     link button disabled
   </a>
 </Playground>
