--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -96,7 +96,7 @@ import { Fragment } from 'react'
 ```jsx
   import '../src/index.css';
 
-  <button className="btn btn--uranus btn--medium">
+  <button className="a-btn a-btn--uranus a-btn--medium">
     primary
   </button>
 ```
