--- a/docs/controls-toggles.mdx
+++ b/docs/controls-toggles.mdx
@@ -14,22 +14,22 @@ Checkboxes are used when a user might select multiple options from a list, or wh
 Mouseover to view `:hover` state.
 
 <Playground>
-  <div className="checkbox">
+  <div className="a-checkbox">
     <input type="checkbox" id="checkbox1" />
     <label htmlFor="checkbox1">Checkbox</label>
   </div>
 
-  <div className="checkbox">
+  <div className="a-checkbox">
     <input type="checkbox" id="checkbox2" checked />
     <label htmlFor="checkbox2">Checked</label>
   </div>
 
-  <div className="checkbox checkbox--indeterminate">
+  <div className="a-checkbox a-checkbox--indeterminate">
     <input type="checkbox" id="checkbox3" checked />
     <label htmlFor="checkbox3">Indeterminate</label>
   </div>
 
-  <div className="checkbox checkbox--disabled">
+  <div className="a-checkbox a-checkbox--disabled">
     <input type="checkbox" id="checkbox4" disabled />
     <label htmlFor="checkbox4">Disabled</label>
   </div>
