--- a/docs/typography.mdx
+++ b/docs/typography.mdx
@@ -9,63 +9,50 @@ import { Playground } from 'docz'
 
 Astro has a purposeful set of typographic styles that provide content organization, hierarchy patterns and consistent information architecture which is essential for good understanding and a solid user experience.
 
-## typefaces
+## Poppins - [download](https://fonts.google.com/specimen/Poppins?selection.family=Poppins:500,600,700)
 
-### Poppins - [download](https://fonts.google.com/specimen/Poppins?selection.family=Poppins:300,400,500,700)
-
-Poppins is our primary font, used in the whole product’s interfaces for interactive components, contextual titles and texts.
+Poppins is our primary font, used in the whole product’s interfaces for interactive components, contextual titles and texts. Poppins provides good legibility in small and large sizes.
 
 <Playground>
-  <p className="text--large">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
-  <p className="text--large">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
-  <p className="text--large">0 1 2 3 4 5 6 7 8 9</p>
+  <p className="a-text--large">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
+  <p className="a-text--large">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+  <p className="a-text--large">0 1 2 3 4 5 6 7 8 9</p>
 </Playground>
 
-#### display
+### sizes
 
-Displays are usually `<p>` HTML elements. They should be used in special cases when a huge and highlighted text is needed, mostly in graphic pieces and components of the product or outer pages and vehicles.
+You may apply CSS classes from the examples below to any HTML elements, according to your semantic needs.
 
 <Playground>
-  <p className="text--display">disp. astro typography</p>
+  <p className="a-text--display">display. huge</p>
 </Playground>
 
-#### headings
-
-Heading styles are set with `<h1>` to `<h4>` HTML elements, but you may also use `.h1` to `.h4` classes if you need to apply these styles to a different markup.
-
 <Playground>
-  <h1>h1. astro typography</h1>
-  <h2>h2. astro typography</h2>
-  <h3>h3. astro typography</h3>
-  <h4>h4. astro typography</h4>
+  <p className="a-title--large">title. large</p>
+  <p className="a-title--medium">title. medium</p>
+  <p className="a-title--small">title. small</p>
 </Playground>
 
-#### paragraphs
-
-Paragraphs are set with `<p>` HTML elements. Default size is medium, so you'll only need CSS size classes for small and large sizes.
-
 <Playground>
-  <p className="text--large">p. astro typography</p>
-  <p>p. astro typography</p>
-  <p className="text--small">p. astro typography</p>
+  <p className="a-text--large">text. large</p>
+  <p className="a-text--medium">text. medium</p>
+  <p className="a-text--small">text. small</p>
 </Playground>
 
-### Lato - [download](https://fonts.google.com/specimen/Lato?selection.family=Lato)
+## Lato - [download](https://fonts.google.com/specimen/Lato?selection.family=Lato)
 
-Lato is our secondary font, used only in paragraphs when maximum legibility is needed - especially in small texts. 
-
-Default size is medium, so you'll only need CSS size classes for small and large sizes.
+Lato is our secondary font. Used in informative texts and components that demand smaller labels, Lato provides good and dynamic legibility, with a serious but friendly structure.
 
 <Playground>
-  <p className="text--secondary">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
-  <p className="text--secondary">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
-  <p className="text--secondary">0 1 2 3 4 5 6 7 8 9</p>
+  <p className="a-text--secondary-large">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
+  <p className="a-text--secondary-large">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+  <p className="a-text--secondary-large">0 1 2 3 4 5 6 7 8 9</p>
 </Playground>
 
-#### paragraphs
+### sizes
 
 <Playground>
-  <p className="text--secondary text--large">p. astro typography</p>
-  <p className="text--secondary">p. astro typography</p>
-  <p className="text--secondary text--small">p. astro typography</p>
+  <p className="a-text--secondary-large">text. large</p>
+  <p className="a-text--secondary-medium">text. medium</p>
+  <p className="a-text--secondary-small">text. small</p>
 </Playground>
