Add radio buttons (#31)
* Add radio button component

* Add prefix to radiobutton css classes

* Add default font to radio button label

* Rename component, improve checked state and alignment

* Remove unnecessary background

* Update radio button docs

--- a/docs/controls-toggles.mdx
+++ b/docs/controls-toggles.mdx
@@ -7,6 +7,48 @@ import { Playground } from 'docz'
 
 # controls & toggles
 
+## radio buttons
+
+Radio buttons appear when the user must select only one option from more than two.
+
+Please follow the markup structure from the examples below. You must create a unique `id` for each radio button shown in the same page.
+
+Mouseover to view `:hover` state.
+
+<Playground>
+  <div className="a-radio">
+    <input type="radio" id="radio1" name="radio" />
+    <label htmlFor="radio1">Radio</label>
+  </div>
+
+  <div className="a-radio">
+    <input type="radio" id="radio2" name="radio" checked />
+    <label htmlFor="radio2">Selected</label>
+  </div>
+
+  <div className="a-radio a-radio--disabled">
+    <input type="radio" id="radio3" name="radio" disabled />
+    <label htmlFor="radio3">Disabled</label>
+  </div>
+</Playground>
+
+Default label behavior is top alignment. You can add the `a-radio--align-middle` modifier class to switch to middle alignment.
+
+<Playground>
+  <div className="a-radio">
+    <input type="radio" id="radio4" name="radio" />
+    <label htmlFor="radio4">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed risus pretium quam vulputate dignissim suspendisse.
+    </label>
+  </div>
+  <div className="a-radio a-radio--align-middle">
+    <input type="radio" id="radio5" name="radio" />
+    <label htmlFor="radio5">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed risus pretium quam vulputate dignissim suspendisse.
+    </label>
+  </div>
+</Playground>
+
 ## checkboxes
 
 Checkboxes are used when a user might select multiple options from a list, or when a single specific action is required - like reading a contract.
