--- a/docs/controls-toggles.mdx
+++ b/docs/controls-toggles.mdx
@@ -17,17 +17,17 @@ Mouseover to view `:hover` state.
 
 <Playground>
   <div className="a-radio">
-    <input type="radio" id="radio1" name="radio" />
+    <input type="radio" id="radio1" name="radiogroup1" />
     <label htmlFor="radio1">Radio</label>
   </div>
 
   <div className="a-radio">
-    <input type="radio" id="radio2" name="radio" checked />
+    <input type="radio" id="radio2" name="radiogroup1" checked />
     <label htmlFor="radio2">Selected</label>
   </div>
 
   <div className="a-radio a-radio--disabled">
-    <input type="radio" id="radio3" name="radio" disabled />
+    <input type="radio" id="radio3" name="radiogroup1" disabled />
     <label htmlFor="radio3">Disabled</label>
   </div>
 </Playground>
@@ -36,13 +36,13 @@ Default label behavior is top alignment. You can add the `a-radio--align-middle`
 
 <Playground>
   <div className="a-radio">
-    <input type="radio" id="radio4" name="radio" />
+    <input type="radio" id="radio4" name="radiogroup2" />
     <label htmlFor="radio4">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed risus pretium quam vulputate dignissim suspendisse.
     </label>
   </div>
   <div className="a-radio a-radio--align-middle">
-    <input type="radio" id="radio5" name="radio" />
+    <input type="radio" id="radio5" name="radiogroup2" />
     <label htmlFor="radio5">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed risus pretium quam vulputate dignissim suspendisse.
     </label>
@@ -74,5 +74,33 @@ Mouseover to view `:hover` state.
   <div className="a-checkbox a-checkbox--disabled">
     <input type="checkbox" id="checkbox4" disabled />
     <label htmlFor="checkbox4">Disabled</label>
+  </div>
+</Playground>
+
+## toggles
+
+A simple control that is used to quickly switch between two possible states.
+
+Mouseover to view `:hover` state.
+
+<Playground>
+  <div className="a-toggle">
+    <label htmlFor="toggle1">off</label>
+    <input type="checkbox" id="toggle1" />
+  </div>
+
+  <div className="a-toggle">
+    <label htmlFor="toggle2">on</label>
+    <input type="checkbox" id="toggle2" checked />
+  </div>
+
+  <div className="a-toggle a-toggle--disabled">
+    <label htmlFor="toggle3">off disabled</label>
+    <input type="checkbox" id="toggle3" disabled />
+  </div>
+
+  <div className="a-toggle a-toggle--disabled">
+    <label htmlFor="toggle4">on disabled</label>
+    <input type="checkbox" id="toggle4" checked disabled />
   </div>
 </Playground>
