--- a/docs/controls-toggles.mdx
+++ b/docs/controls-toggles.mdx
@@ -18,41 +18,43 @@ Please follow the markup structure from the examples below. You must create a un
 
 Mouseover to view `:hover` state.
 
+To create the disabled state, add the `a-radio--disabled` modifier class on element root and `disabled` attribute on the `<input>` tag.
+
 <Playground>
   <div className="a-radio">
-    <input type="radio" id="radio1" name="radiogroup1" />
     <label htmlFor="radio1">Radio</label>
+    <input type="radio" id="radio1" name="radiogroup1" />
   </div>
 
-<div className='a-radio'>
-  <input type='radio' id='radio2' name='radiogroup1' defaultChecked />
-  <label htmlFor='radio2'>Selected</label>
-</div>
+  <div className="a-radio">
+    <label htmlFor="radio2">Selected</label>
+    <input type="radio" id="radio2" name="radiogroup1" defaultChecked />
+  </div>
 
   <div className="a-radio a-radio--disabled">
-    <input type="radio" id="radio3" name="radiogroup1" disabled />
     <label htmlFor="radio3">Disabled</label>
+    <input type="radio" id="radio3" name="radiogroup1" disabled />
   </div>
 </Playground>
 
 Default label behavior is top alignment. You can add the `a-radio--align-middle` modifier class to switch to middle alignment.
 
 <Playground>
-  <div className='a-radio'>
-    <input type='radio' id='radio4' name='radiogroup2' />
-    <label htmlFor='radio4'>
+  <div className="a-radio">
+    <label htmlFor="radio4">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Sed risus pretium quam
       vulputate dignissim suspendisse.
     </label>
+    <input type="radio" id="radio4" name="radiogroup2" />
   </div>
-  <div className='a-radio a-radio--align-middle'>
-    <input type='radio' id='radio5' name='radiogroup2' />
-    <label htmlFor='radio5'>
+  <div className="a-radio a-radio--align-middle">
+    <label htmlFor="radio5">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Sed risus pretium quam
       vulputate dignissim suspendisse.
     </label>
+    <input type="radio" id="radio5" name="radiogroup2" />
   </div>
 </Playground>
 
@@ -62,25 +64,27 @@ Checkboxes are used when a user might select multiple options from a list, or wh
 
 Mouseover to view `:hover` state.
 
+To create the disabled state, add the `a-checkbox--disabled` modifier class on element root and `disabled` attribute on the `<input>` tag.
+
 <Playground>
   <div className="a-checkbox">
-    <input type="checkbox" id="checkbox1" />
     <label htmlFor="checkbox1">Checkbox</label>
+    <input type="checkbox" id="checkbox1" />
   </div>
 
-<div className='a-checkbox'>
-  <input type='checkbox' id='checkbox2' defaultChecked />
-  <label htmlFor='checkbox2'>Checked</label>
-</div>
+  <div className="a-checkbox">
+    <label htmlFor="checkbox2">Checked</label>
+    <input type="checkbox" id="checkbox2" defaultChecked />
+  </div>
 
-<div className='a-checkbox a-checkbox--indeterminate'>
-  <input type='checkbox' id='checkbox3' defaultChecked />
-  <label htmlFor='checkbox3'>Indeterminate</label>
-</div>
+  <div className="a-checkbox a-checkbox--indeterminate">
+    <label htmlFor="checkbox3">Indeterminate</label>
+    <input type="checkbox" id="checkbox3" defaultChecked />
+  </div>
 
   <div className="a-checkbox a-checkbox--disabled">
-    <input type="checkbox" id="checkbox4" disabled />
     <label htmlFor="checkbox4">Disabled</label>
+    <input type="checkbox" id="checkbox4" disabled />
   </div>
 </Playground>
 
@@ -89,6 +93,8 @@ Mouseover to view `:hover` state.
 A simple control that is used to quickly switch between two possible states.
 
 Mouseover to view `:hover` state.
+
+To create the disabled state, add the `a-toggle--disabled` modifier class on element root and `disabled` attribute on the `<input>` tag.
 
 <Playground>
   <div className="a-toggle">
@@ -119,21 +125,23 @@ The colored percentage fill and counter label will need JS to work on your proje
 
 Mouseover and click to view `:hover` and `:active` state.
 
+To create the disabled state, add the `a-slider--disabled` modifier class on element root and `disabled` attribute on the `<input>` tag.
+
 <Playground>
   <div className="a-slider">
-    <input type="range" min="1" max="100" id="slider1" />
     <label htmlFor="slider1">
       Slider
       <span className="a-slider--value">50 coins</span>
     </label>
+    <input type="range" min="1" max="100" id="slider1" />
   </div>
 
-  <div className="a-slider">
-    <input type="range" min="1" max="100" id="slider1" disabled />
+  <div className="a-slider a-slider--disabled">
     <label htmlFor="slider1">
       Disabled
       <span className="a-slider--value">0 coins</span>
     </label>
+    <input type="range" min="1" max="100" id="slider1" disabled />
   </div>
 </Playground>
 
