Add icon buttons to src CSS and documentation (#64)
* Create icon buttons on src and docs
* Change icons css to better fit buttons

--- a/docs/buttons.mdx
+++ b/docs/buttons.mdx
@@ -7,7 +7,7 @@ import { Playground } from 'docz';
 
 # buttons
 
-## primary
+## primary buttons
 
 Primary buttons are medium sized and have a colored background. They aren't always the same color, though, so there isn't a default "primary" look or CSS class - primary here is more of a concept.
 
@@ -27,7 +27,7 @@ Mouseover and click to view `:hover` and `:active` states.
   </button>
 </Playground>
 
-## outline
+## outline buttons
 
 Outline buttons can be used as secondary roles. Secondary buttons present secondary actions when there's already a primary action in the same section or screen.
 
@@ -77,9 +77,109 @@ Mouseover and click to view `:hover` and `:active` states.
   </button>
 </Playground>
 
+## iconlabel buttons
+
+Buttons with icons help identify the action or context within the interface.
+
+To create an iconlabel button, first create a regular primary button with all size and color modifier classes, plus the `a-btn--iconlabel` class. Then, if you want the icon to the left of the label, add a `<i>` tag inside the button and before its inner text.
+
+If you want the icon to the right of the label, add the `a-btn--iconlabel-right` in addition to the previous settings and place the `<i>` tag inside the button and after its inner text, instead.
+
+See our [Iconography](https://astro.magnetis.com.br/#/docs-iconography) to learn how to use Astro icons.
+
+<Playground>
+  <button className='a-btn a-btn--uranus a-btn--medium a-btn--iconlabel'>
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+    iconlabel
+  </button>
+  <button className='a-btn a-btn--uranus a-btn--medium a-btn--iconlabel a-btn--iconlabel-right'>
+    iconlabel
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+  </button>
+  <button
+    className='a-btn a-btn--uranus a-btn--medium a-btn--iconlabel a-btn--iconlabel-right'
+    disabled
+  >
+    iconlabel
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+  </button>
+</Playground>
+
+## outline iconlabel buttons
+
+Outline iconlabel buttons are commonly used in microinteractions and secondary commands. Usage works the same as regular iconlabel buttons.
+
+<Playground>
+  <button className='a-btn a-btn--outline-uranus a-btn--medium a-btn--iconlabel'>
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+    iconlabel
+  </button>
+  <button className='a-btn a-btn--outline-uranus a-btn--medium a-btn--iconlabel a-btn--iconlabel-right'>
+    iconlabel
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+  </button>
+  <button
+    className='a-btn a-btn--outline-uranus a-btn--medium a-btn--iconlabel a-btn--iconlabel-right'
+    disabled
+  >
+    iconlabel
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+  </button>
+</Playground>
+
+## ghost iconlabel buttons
+
+Ghost iconlabel buttons are also used in microinteractions and smaller commands. Usage works the same as regular iconlabel buttons.
+
+<Playground>
+  <button className='a-btn a-btn--ghost-uranus a-btn--medium a-btn--iconlabel'>
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+    iconlabel
+  </button>
+  <button className='a-btn a-btn--ghost-uranus a-btn--medium a-btn--iconlabel a-btn--iconlabel-right'>
+    iconlabel
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+  </button>
+  <button
+    className='a-btn a-btn--ghost-uranus a-btn--medium a-btn--iconlabel a-btn--iconlabel-right'
+    disabled
+  >
+    iconlabel
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+  </button>
+</Playground>
+
+## icon buttons
+
+Icon buttons can be used for simple microinteractions and commands.
+
+To create an icon button, first create a regular primary or outline button with all size and color modifier classes, plus the `a-btn--icon` class. Then add a `<i>` tag inside the button with no inner text.
+
+See our [Iconography](https://astro.magnetis.com.br/#/docs-iconography) to learn how to use Astro icons.
+
+<Playground>
+  <button className='a-btn a-btn--uranus a-btn--medium a-btn--icon'>
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+  </button>
+  <button className='a-btn a-btn--outline-uranus a-btn--medium a-btn--icon'>
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+  </button>
+  <button className='a-btn a-btn--uranus a-btn--medium a-btn--icon' disabled>
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+  </button>
+  <button
+    className='a-btn a-btn--outline-uranus a-btn--medium a-btn--icon'
+    disabled
+  >
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+  </button>
+</Playground>
+
 ## sizes
 
 Buttons can have different sizes, also by changing their CSS size class.
+
+When creating small or big iconlabel or icon buttons, remember to change the size classes on both the button and the icon inside it.
 
 <Playground>
   <button className='a-btn a-btn--uranus a-btn--small'>small</button>
@@ -108,6 +208,63 @@ Buttons can have different sizes, also by changing their CSS size class.
   </button>
   <button className='a-btn a-btn--ghost-uranus a-btn--large'>
     ghost large
+  </button>
+</Playground>
+
+<Playground>
+  <button className='a-btn a-btn--uranus a-btn--iconlabel a-btn--small'>
+    <i class='a-icon a-icon__calendar a-icon--size-small' />
+    iconlabel small
+  </button>
+  <button className='a-btn a-btn--uranus a-btn--iconlabel a-btn--medium'>
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+    iconlabel medium
+  </button>
+  <button className='a-btn a-btn--uranus a-btn--iconlabel a-btn--large'>
+    <i class='a-icon a-icon__calendar a-icon--size-large' />
+    iconlabel large
+  </button>
+</Playground>
+
+<Playground>
+  <button className='a-btn a-btn--outline-uranus a-btn--iconlabel a-btn--small'>
+    <i class='a-icon a-icon__calendar a-icon--size-small' />
+    outline iconlabel small
+  </button>
+  <button className='a-btn a-btn--outline-uranus a-btn--iconlabel a-btn--medium'>
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+    outline iconlabel medium
+  </button>
+  <button className='a-btn a-btn--outline-uranus a-btn--iconlabel a-btn--large'>
+    <i class='a-icon a-icon__calendar a-icon--size-large' />
+    outline iconlabel large
+  </button>
+</Playground>
+
+<Playground>
+  <button className='a-btn a-btn--ghost-uranus a-btn--iconlabel a-btn--small'>
+    <i class='a-icon a-icon__calendar a-icon--size-small' />
+    ghost iconlabel small
+  </button>
+  <button className='a-btn a-btn--ghost-uranus a-btn--iconlabel a-btn--medium'>
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+    ghost iconlabel medium
+  </button>
+  <button className='a-btn a-btn--ghost-uranus a-btn--iconlabel a-btn--large'>
+    <i class='a-icon a-icon__calendar a-icon--size-large' />
+    ghost iconlabel large
+  </button>
+</Playground>
+
+<Playground>
+  <button className='a-btn a-btn--uranus a-btn--small a-btn--icon'>
+    <i class='a-icon a-icon__calendar a-icon--size-small' />
+  </button>
+  <button className='a-btn a-btn--uranus a-btn--medium a-btn--icon'>
+    <i class='a-icon a-icon__calendar a-icon--size-medium' />
+  </button>
+  <button className='a-btn a-btn--uranus a-btn--large a-btn--icon'>
+    <i class='a-icon a-icon__calendar a-icon--size-large' />
   </button>
 </Playground>
 
