Adjust Docz theme (desktop version) (#63)
* Add and edit CSS to create theme styles
* Update Astro to fix minor usage problems unrelated to theme

--- a/docs/buttons.mdx
+++ b/docs/buttons.mdx
@@ -1,11 +1,13 @@
 ---
-name: Buttons
+name: buttons
 ---
 
 import '../src/index.css';
 import { Playground } from 'docz';
 
 # buttons
+
+#### Buttons define what action will occur when the user interacts with features and components of the platform. Buttons are used to initialize and dictate the actions on the interface, either in the background or foreground of an experience.
 
 ## primary buttons
 
