--- a/docs/iconography.mdx
+++ b/docs/iconography.mdx
@@ -1,5 +1,5 @@
 ---
-name: Iconography
+name: iconography
 ---
 
 import '../src/index.css';
@@ -8,7 +8,7 @@ import IconsCollection from './components/IconsCollection';
 
 # iconography
 
-Icons carry affordance and interaction patterns of Magnetis’ platform. They should be used in meaningful assets like buttons and visual informative support to help users navigate through our product.
+#### Icons carry affordance and interaction patterns of Magnetis’ platform. They should be used in meaningful assets like buttons and visual informative support to help users navigate through our product.
 
 ## dashboard icons
 
@@ -107,10 +107,10 @@ You may apply the following CSS modifiers to apply left or right spacers.
 <Playground>
   <div>
     <i className='a-icon a-icon__profile a-icon--space-right' />
-    <span>Astro Team</span>
+    <span className='a-text--medium'>Astro Team</span>
   </div>
   <div>
-    <span>Astro Team</span>
+    <span className='a-text--medium'>Astro Team</span>
     <i className='a-icon a-icon__profile a-icon--space-left' />
   </div>
 </Playground>
