Create messaging inputs (#62)
* Rebase with master branch

* Create input messaging css

* Rebase with branch master

* Add validation when inputs has value

* Rebase with branch master

* Rebase with branch master

* Change message input stucture and css

* Change placeholder color

* User default color o messaging input button icon

* Create messaging input handle

--- a/docs/inputs.mdx
+++ b/docs/inputs.mdx
@@ -5,7 +5,7 @@ name: inputs
 import { Fragment } from 'react';
 import '../src/index.css';
 import { Playground } from 'docz';
-import HandleFloatingLabel from './js/inputs';
+import HandleInputEvents from './js/inputs';
 
 # inputs
 
@@ -21,7 +21,7 @@ The floating label will need JS to work on your project. You may find the code f
 
 To create the disabled state, add the `a-input--disabled` modifier class on element root and `disabled` attribute on the `<input>` tag.
 
-<Playground>
+<Playground className='two-columns'>
   <div className='a-input'>
     <input id='input1' type='text' aria-labelledby='label1' />
     <label id='label1' htmlFor='input1'>
@@ -74,7 +74,7 @@ To create the disabled state, add the `a-input--disabled` modifier class on elem
 
 Text areas are used in contexts that demand long and descriptive texts.
 
-<Playground>
+<Playground className='two-columns'>
   <div className='a-input'>
     <textarea name='random' id='textarea1' rows='10' cols='20'></textarea>
     <label id='label6' htmlFor='textarea1'>Write your book here</label>
@@ -86,4 +86,33 @@ Text areas are used in contexts that demand long and descriptive texts.
   </div>
 </Playground>
 
-<HandleFloatingLabel />
+## messaging inputs
+
+Inputs used for messaging and similar contexts. These inputs come with [icon buttons](/docs-buttons#icon-buttons) as commands that send away these values and contents.
+
+Click inside to view `:active` state.
+
+To create the disabled state, add the `a-input--disabled` modifier class on element root and`disabled` attribute on the `<input>` and `<button>` tags.
+
+<Playground className='two-columns'>
+  <div className='a-input a-input--messaging'>
+    <input id='input6' type='text' placeholder='Standard' />
+    <button className='a-btn a-btn--earth a-btn--medium a-btn--icon' disabled>
+      <i className='a-icon a-icon__arrow-right a-icon--size-medium' />
+    </button>
+  </div>
+  <div className='a-input a-input--messaging a-input--disabled'>
+    <input
+      id='input6'
+      type='text'
+      aria-labelledby='label6'
+      placeholder='Disabled'
+      disabled
+    />
+    <button className='a-btn a-btn--earth a-btn--medium a-btn--icon' disabled>
+      <i className='a-icon a-icon__arrow-right a-icon--size-medium' />
+    </button>
+  </div>
+</Playground>
+
+<HandleInputEvents />
