Refactor Controls & Toggles to fix pseudoclass bug on Firefox (#68)

--- a/docs/controls-toggles.mdx
+++ b/docs/controls-toggles.mdx
@@ -24,14 +24,17 @@ To create the disabled state, add the `a-radio--disabled` modifier class on elem
   <div className='a-radio'>
     <label htmlFor='radio1'>Radio</label>
     <input type='radio' id='radio1' name='radiogroup1' />
+    <span className='a-radio__shape' />
   </div>
   <div className='a-radio'>
     <label htmlFor='radio2'>Selected</label>
     <input type='radio' id='radio2' name='radiogroup1' defaultChecked />
+    <span className='a-radio__shape' />    
   </div>
   <div className='a-radio a-radio--disabled'>
     <label htmlFor='radio3'>Disabled</label>
     <input type='radio' id='radio3' name='radiogroup1' disabled />
+    <span className='a-radio__shape' />
   </div>
 </Playground>
 
@@ -45,6 +48,7 @@ Default label behavior is top alignment. You can add the `a-radio--align-middle`
       vulputate dignissim suspendisse.
     </label>
     <input type='radio' id='radio4' name='radiogroup2' />
+    <span className='a-radio__shape' />
   </div>
   <div className='a-radio a-radio--align-middle'>
     <label htmlFor='radio5'>
@@ -53,6 +57,7 @@ Default label behavior is top alignment. You can add the `a-radio--align-middle`
       vulputate dignissim suspendisse.
     </label>
     <input type='radio' id='radio5' name='radiogroup2' />
+    <span className='a-radio__shape' />
   </div>
 </Playground>
 
@@ -68,18 +73,22 @@ To create the disabled state, add the `a-checkbox--disabled` modifier class on e
   <div className='a-checkbox'>
     <label htmlFor='checkbox1'>Checkbox</label>
     <input type='checkbox' id='checkbox1' />
+    <span className='a-checkbox__shape' />
   </div>
   <div className='a-checkbox'>
     <label htmlFor='checkbox2'>Checked</label>
     <input type='checkbox' id='checkbox2' defaultChecked />
+    <span className='a-checkbox__shape' />
   </div>
   <div className='a-checkbox a-checkbox--indeterminate'>
     <label htmlFor='checkbox3'>Indeterminate</label>
     <input type='checkbox' id='checkbox3' defaultChecked />
+    <span className='a-checkbox__shape' />
   </div>
   <div className='a-checkbox a-checkbox--disabled'>
     <label htmlFor='checkbox4'>Disabled</label>
     <input type='checkbox' id='checkbox4' disabled />
+    <span className='a-checkbox__shape' />
   </div>
 </Playground>
 
@@ -95,14 +104,17 @@ To create the disabled state, add the `a-toggle--disabled` modifier class on ele
   <div className='a-toggle'>
     <label htmlFor='toggle1'>off</label>
     <input type='checkbox' id='toggle1' />
+    <span className='a-toggle__shape' />
   </div>
   <div className='a-toggle'>
     <label htmlFor='toggle2'>on</label>
     <input type='checkbox' id='toggle2' defaultChecked />
+    <span className='a-toggle__shape' />
   </div>
   <div className='a-toggle a-toggle--disabled'>
     <label htmlFor='toggle3'>disabled</label>
     <input type='checkbox' id='toggle3' disabled />
+    <span className='a-toggle__shape' />
   </div>
 </Playground>
 
