--- a/docs/buttons.mdx
+++ b/docs/buttons.mdx
@@ -279,7 +279,7 @@ If you're looking for buttons in `<a>` tags, see "buttons in `<a>` elements" bel
 Mouseover and click to view `:hover` and `:active` states.
 
 <Playground>
-  <a className='a-link'>inline link</a>
+  <a className='a-link' tabIndex='0'>inline link</a>
 </Playground>
 
 ## buttons in `<a>` elements
@@ -291,8 +291,8 @@ Although button classes are designed for `<button>` elements, you may also use t
 If your `<a>` button triggers in-page functionalities instead of linking (to other pages or within the current page), make them semantically accessible by adding a `role="button"`.
 
 <Playground>
-  <a className='a-btn a-btn--uranus a-btn--medium'>link button</a>
-  <a className='a-btn a-btn--uranus a-btn--medium a-btn--disabled'>
+  <a className='a-btn a-btn--uranus a-btn--medium' tabIndex='0'>link button</a>
+  <a className='a-btn a-btn--uranus a-btn--medium a-btn--disabled' tabIndex='0'>
     link button disabled
   </a>
 </Playground>
